# personal-projects

./: .gitignore  README.md  index.html  projects_data.js
ml-projects/subconscious-robotics/: README.md  pyproject.toml  requirements.txt  verify-setup.py
ml-projects/subconscious-robotics/.venv311/: pyvenv.cfg
ml-projects/subconscious-robotics/assets/: quadruped.urdf  simple-robot.urdf
ml-projects/subconscious-robotics/configs/: agent.yaml  config.yaml  physics.yaml  reward.yaml
ml-projects/subconscious-robotics/export/: -init-.py  onnx-export.py
ml-projects/subconscious-robotics/outputs/2026-02-08/23-09-17/.hydra/: hydra.yaml
ml-projects/subconscious-robotics/outputs/2026-02-08/23-11-51/.hydra/: config.yaml  hydra.yaml
ml-projects/subconscious-robotics/outputs/2026-02-08/23-30-22/.hydra/: hydra.yaml
ml-projects/subconscious-robotics/outputs/logs/quadruped-ppo-20260208-230918/: monitor.monitor.csv
ml-projects/subconscious-robotics/outputs/logs/quadruped-ppo-20260208-231152/: monitor.monitor.csv
ml-projects/subconscious-robotics/outputs/logs/quadruped-ppo-20260208-233023/: monitor.monitor.csv
ml-projects/subconscious-robotics/outputs/logs/quadruped-ppo-20260208-233023/eval-logs/: evaluations.npz
ml-projects/subconscious-robotics/src/: -init-.py  cli.py  eval.py  train.py
ml-projects/subconscious-robotics/src/env/: -init-.py  base-env.py  domain-randomization.py  reward-shaper.py  urdf-loader.py
ml-projects/subconscious-robotics/src/models/: -init-.py  device-utils.py  policy-networks.py
scripts/: build-directory-data.js  deploy-frontends.sh  (+5 more)
(+340 files in other folders)
