[tool.poetry]
name = "subconscious-robotics"
version = "1.0.0"
description = "Production-ready Sim-to-Real framework for Subconscious Robot Training"
authors = ["Robotics Engineer"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.5"
stable-baselines3 = "^2.2.1"
gymnasium = "^0.29.1"
hydra-core = "^1.3.2"
tensorboard = "^2.15.0"
torch = "^2.1.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
click = "^8.1.7"
numpy = "^1.26.0"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"

[tool.poetry.scripts]
robot-train = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
